# python-detect-resolution

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
scripts/: bootstrap-dev
src/detect_resolution/: __about__.py  analyzer.py  cli.py  input.py  resolutions.py
src/detect_resolution/nn/: __init__.py  model.py  training.py  training_data.py
tests/: __init__.py
